--- a/gold-admin-frontend/src/app/views/pages/admin/loan-management/loan-transfer/loan-transfer.component.html
+++ b/gold-admin-frontend/src/app/views/pages/admin/loan-management/loan-transfer/loan-transfer.component.html
@@ -19,17 +19,21 @@
                                     </div>
                                     <div class="col-6">
                                         <select name="" id="" class="form-control" 
+                                        [class.isError]="approvalForm.controls.loanTransferStatusForBM.touched && this.approvalForm.controls.loanTransferStatusForBM.value =='pending'"
                                             formControlName="loanTransferStatusForBM">
-                                            <option value="">Select Status</option>
+                                            <option value="pending">Select Status</option>
                                             <option [value]="manager.value" *ngFor="let manager of branchManager">
                                                 {{manager.name | titlecase}}</option>
                                         </select>
+                                        <mat-error *ngIf="approvalForm.controls.loanTransferStatusForBM.touched && this.approvalForm.controls.loanTransferStatusForBM.value =='pending'">
+                                            Field Required
+                                        </mat-error>
                                     </div>
                                 </div>
                             </div>
                         </div>
                         <div class="row kt-padding-t-25 justify-content-center"
-                            *ngIf="approvalForm.controls.loanTransferStatusForBM.value && approvalForm.controls.loanTransferStatusForBM.value != 'approved'">
+                            *ngIf="approvalForm.controls.loanTransferStatusForBM.value !='pending' && approvalForm.controls.loanTransferStatusForBM.value != 'approved'">
                             <div class="col-6">
                                 <div class="row">
                                     <div class="col-4 form-label">
@@ -37,11 +41,14 @@
                                     </div>
                                     <div class="col-6">
                                         <select name="" id="" class="form-control" formControlName="reason"
-                                            (change)="patchValue()">
+                                            (change)="patchValue()" [class.isError]="approvalForm.controls.reason.invalid && approvalForm.controls.reason.touched">
                                             <option value="">Select Status</option>
                                             <option [value]="reason.description" *ngFor="let reason of reasons">
                                                 {{reason.description | titlecase}}</option>
                                         </select>
+                                        <mat-error *ngIf="approvalForm.controls.reason.invalid && approvalForm.controls.reason.touched">
+                                            Field Required
+                                        </mat-error>
                                     </div>
                                 </div>
                             </div>
@@ -54,6 +61,7 @@
                                         <mat-form-field class="w-100">
                                             <mat-label>Reason</mat-label>
                                             <textarea matInput formControlName="reasonByBM"></textarea>
+                                            <mat-error>Field Required</mat-error>
                                         </mat-form-field>
                                     </div>
                                 </div>
@@ -98,7 +106,11 @@
                                         <label for="">Transaction ID</label>
                                     </div>
                                     <div class="col-6">
-                                        <input type="text" class="form-control" placeholder="Transxxxxx" formControlName="transactionId" re>
+                                        <input type="text" class="form-control" placeholder="Transxxxxx" formControlName="transactionId" 
+                                        [class.isError]="disbursalForm.controls.transactionId.invalid && disbursalForm.controls.transactionId.touched">
+                                        <mat-error *ngIf="disbursalForm.controls.transactionId.invalid && disbursalForm.controls.transactionId.touched">
+                                            Field Required
+                                        </mat-error>
                                     </div>
                                 </div>
                             </div>
