--- a/gold-admin-frontend/src/app/views/pages/admin/funds-approvals/jewellery-release-approval/part-release-approval/part-release-approval.component.html
+++ b/gold-admin-frontend/src/app/views/pages/admin/funds-approvals/jewellery-release-approval/part-release-approval/part-release-approval.component.html
@@ -95,6 +95,14 @@
                     </mat-cell>
                 </ng-container>
 
+                <ng-container matColumnDef="updateStatus">
+                    <mat-header-cell *matHeaderCellDef> </mat-header-cell>
+                    <mat-cell *matCellDef="let item">
+                        <kt-button (click)="updateStatus(item)" [value]="'Update'" [type]="'button'">
+                        </kt-button>
+                    </mat-cell>
+                </ng-container>
+
                 <ng-container matColumnDef="assignAppraiser">
                     <mat-header-cell *matHeaderCellDef></mat-header-cell>
                     <mat-header-cell *matHeaderCellDef></mat-header-cell>
