--- a/gold-admin-frontend/src/app/views/pages/admin/loan-management/loan-details/loan-details.component.html
+++ b/gold-admin-frontend/src/app/views/pages/admin/loan-management/loan-details/loan-details.component.html
@@ -60,7 +60,7 @@
 
                 <ng-container matColumnDef="tenure">
                     <mat-header-cell *matHeaderCellDef>Loan Tenure</mat-header-cell>
-                    <mat-cell *matCellDef="let loan">{{loan?.finalLoan?.tenure}} Months</mat-cell>
+                    <mat-cell *matCellDef="let loan">{{loan?.tenure}} Months</mat-cell>
                 </ng-container>
 
                 <ng-container matColumnDef="interestRestDays">
