--- a/gold-admin-frontend/src/app/views/pages/admin/loan-management/packets/packet-tracking/packet-tracking.component.html
+++ b/gold-admin-frontend/src/app/views/pages/admin/loan-management/packets/packet-tracking/packet-tracking.component.html
@@ -65,6 +65,8 @@
                                >Update Location</button>
                             <button (click)="packet(loan)" class="btn-transparent"
                                 >View Log</button>
+                                <button (click)="packet(loan)" class="btn-transparent"
+                                >View Location</button>
                     </mat-cell>
                 </ng-container>
 
