--- a/gold-admin-frontend/src/app/views/pages/admin/loan-management/loan-transfer-list/loan-transfer-list.component.html
+++ b/gold-admin-frontend/src/app/views/pages/admin/loan-management/loan-transfer-list/loan-transfer-list.component.html
@@ -35,7 +35,7 @@
                 <ng-container matColumnDef="actions">
                     <mat-header-cell *matHeaderCellDef></mat-header-cell>
                     <mat-cell *matCellDef="let loan">
-                        <button class="apply-kyc" *ngIf="!loan?.loanTransfer?.isLoanApplied && loan?.loanTransfer?.loanTransferCurrentStage == '5'" (click)="applyLoan(loan)">Apply Loan</button></mat-cell>
+                        <button class="apply-kyc" *ngIf="!loan?.isLoanSubmitted && loan?.loanTransfer?.loanTransferCurrentStage == '5'" (click)="applyLoan(loan)">Apply Loan</button></mat-cell>
                 </ng-container>
 
                 <ng-container matColumnDef="status">
