--- a/gold-admin-frontend/src/app/views/pages/admin/loan-management/loan-transfer/loan-transfer.component.html
+++ b/gold-admin-frontend/src/app/views/pages/admin/loan-management/loan-transfer/loan-transfer.component.html
@@ -10,7 +10,7 @@
                     <mat-tab label="Upload Documents" [disabled]="disabled[1]">
                         <kt-upload-loan-documents [masterAndLoanIds]="masterAndLoanIds" [loanTransfer]="laonTransferDetails" (next)="next($event)"></kt-upload-loan-documents>
                     </mat-tab>
-                    <mat-tab label="Loan Trasnfer Approval" [formGroup]="approvalForm" [disabled]="disabled[2]">
+                    <mat-tab *ngxPermissionsOnly="['loanTransferRating']" label="Loan Trasnfer Approval" [formGroup]="approvalForm" [disabled]="disabled[2]">
                         <div class="row justify-content-center">
                             <div class="col-6">
                                 <div class="row">
@@ -32,7 +32,7 @@
                                 </div>
                             </div>
                         </div>
-                        <div class="row kt-padding-t-25 justify-content-center"
+                        <div class="row kt-padding-t-25 justify-content-center" 
                             *ngIf="approvalForm.controls.loanTransferStatusForBM.value !='pending' && approvalForm.controls.loanTransferStatusForBM.value != 'approved'">
                             <div class="col-6">
                                 <div class="row">
@@ -73,7 +73,7 @@
                             </div>
                         </div>
                     </mat-tab>
-                    <mat-tab label="Disbursal" [formGroup]="disbursalForm" [disabled]="disabled[3]">
+                    <mat-tab *ngxPermissionsOnly="['loanTransferDisbursal']" label="Disbursal" [formGroup]="disbursalForm" [disabled]="disabled[3]">
 
                         <div class="row justify-content-center kt-padding-t-25">
                             <div class="col-6">
